12/14/2009:
    Created preferences dialog to manage options -
        An option to select the unit Bytes/bits
        A spinbutton entry for setting the minimum threshold
        A "Devices" pref-pane which allows selection of interfaces into virtual interfaces
        A color picker for upload and download colors for use in the line-graph.
    Fixed division by zero that would occur in some scenarios.

12/10/2009:
    Added virtual interfaces for SUM and MULTI
        The Sum Interface is a virtual interface which displays the sum throughput of all interfaces that are selected for "Sum"
        The Multi Interface is a virtual interface which displays each individual throughput of the interfaces that are selected for "Multi", each with the colors defined for the interface.
    Added logic to parse and use preferences that are planned

11/29/2009:
    Changed table generation function to be less verbose
    Fixed regular expression for gathering IP/Netmask
    Changed IP/Netmask tooltip logic
    Changed command for device stats gathering to include administratively down-interfaces

11/28/2009:
    pep8 verified main program file
    Added a few non-parsed comments to the source file

11/28/2009:
    Changed initial ratio value to 1 to prevent the graphs from ignoring data transfers below 3200 bytes
    Changed the graph scaling to display the line graph almost center of the graph window below 6400 bytes
    Added items to the TODO list

11/27/2009:
    Filter out the wmaster0 interface.
    Applied patch from onox:
        Renamed some classes
        Removed functions for things abstracted by AWN
        Cleaned up some of the syntax
        Cleaned up some naming conventions
    Created a new branch repository (previous was setup wrong): lp:~kylehuff/awn-extras/0.4-bandwidth-monitor

11/27/2009:    
    Applied patch from mhr3 which included -
        Changes to applet short-name
        Changes to Makefile.am
        Fixed spelling of "CHANGLOG" to "CHANGELOG"